@@ -1,4 +1,7 @@
 2015-10-17  Jean-Louis Martineau <martineau@zmanda.com>
+	* man/xml-source/amanda-devices.7.xml: Add STANDARD_IA storage_class
+
+2015-10-17  Jean-Louis Martineau <martineau@zmanda.com>
 	* application-src/amgtar.c Default SPARSE value is NO if tar < 1.28
 
 2015-10-16  Jean-Louis Martineau <martineau@zmanda.com>
